# grafana-lab-webapp

./: .env.example  ARCHITECTURE.md  DEPLOYMENT.md  README.md  docker-compose.yml
docs/: METRICS.md  TROUBLESHOOTING.md
grafana-stack/: .env.example  README.md  docker-compose.yml
grafana-stack/alertmanager/: alertmanager.yml
grafana-stack/grafana/provisioning/dashboards/: dashboards.yml
grafana-stack/grafana/provisioning/dashboards/json/: overview.json
grafana-stack/grafana/provisioning/datasources/: datasources.yml
grafana-stack/loki/: loki-config.yml
grafana-stack/prometheus/: alert_rules.yml  prometheus.yml
grafana-stack/tempo/: tempo-config.yml
infrastructure/postgres/: init.sql
infrastructure/promtail/: promtail-config.yml
infrastructure/traefik/: traefik.yml
scripts/: deploy.sh  generate-load.sh  health-check.sh
services/frontend/: Dockerfile  package.json
services/frontend/app/: globals.css  layout.tsx  page.tsx
services/inventory-service/: Cargo.toml  Dockerfile
services/inventory-service/src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  metrics.rs  models.rs
services/notification-service/: Dockerfile  index.js  package.json
services/order-service/: Dockerfile  go.mod  main.go
services/payment-service/: Dockerfile  main.py  requirements.txt
services/user-service/: Dockerfile  pom.xml
services/user-service/src/main/java/com/example/userservice/: UserServiceApplication.java
services/user-service/src/main/java/com/example/userservice/config/: SecurityConfig.java
services/user-service/src/main/java/com/example/userservice/controller/: HealthController.java  UserController.java
services/user-service/src/main/java/com/example/userservice/model/: LoginRequest.java  LoginResponse.java  RegisterRequest.java  User.java
services/user-service/src/main/java/com/example/userservice/repository/: UserRepository.java
services/user-service/src/main/java/com/example/userservice/service/: UserService.java
services/user-service/src/main/resources/: application.yml
